apps/sparkyfitness/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparkyfitness
  namespace: sparkyfitness
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - fitness.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sparkyfitness-frontend
          port: 80
